Added Swagger doc
